--- a/requirements_pip.txt
+++ b/requirements_pip.txt
@@ -27,7 +27,7 @@ mkl-service==2.4.0
 multidict==6.0.2
 mysqlclient==2.1.0
 numexpr==2.8.1
-numpy==1.21.4
+numpy
 packaging==21.3
 pandas==1.3.5
 pycparser==2.21
